[gd_scene load_steps=5 format=3 uid="uid://5nbkmh4uaal2"]

[ext_resource type="Script" uid="uid://ir5b5ia3l0wl" path="res://scripts/character_select.gd" id="1_jgus3"]
[ext_resource type="Texture2D" uid="uid://cavlkxfvaqinw" path="res://assets/SPRITES/DeathAdder art 1.png" id="2_bow2h"]
[ext_resource type="FontFile" uid="uid://bitgycu4ph68m" path="res://assets/Fonts/Cybrpnuk2.ttf" id="2_fa52j"]
[ext_resource type="Texture2D" uid="uid://c64nbnvavflg" path="res://assets/SPRITES/Milan Flare Gemini 1.png" id="2_uxcyu"]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jgus3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterBox" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainVbox" type="VBoxContainer" parent="Panel/CenterBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/CenterBox/MainVbox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fa52j")
theme_override_font_sizes/font_size = 23
text = "SELECT CHARACTER"
horizontal_alignment = 1

[node name="CharacterGrid" type="GridContainer" parent="Panel/CenterBox/MainVbox"]
layout_mode = 2
columns = 2

[node name="Char1" type="TextureButton" parent="Panel/CenterBox/MainVbox/CharacterGrid"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture_normal = ExtResource("2_bow2h")
ignore_texture_size = true
stretch_mode = 0
metadata/character_path = "res://scenes/player1.tscn"

[node name="Char2" type="TextureButton" parent="Panel/CenterBox/MainVbox/CharacterGrid"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture_normal = ExtResource("2_uxcyu")
ignore_texture_size = true
stretch_mode = 0
metadata/character_path = "res://scenes/player1.tscn"

[node name="StatusLabel" type="Label" parent="Panel/CenterBox/MainVbox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fa52j")
text = "Player 1: Choose Your Fighter"
horizontal_alignment = 1

[node name="BottomButtons" type="HBoxContainer" parent="Panel/CenterBox/MainVbox"]
layout_mode = 2

[node name="Backbutton" type="Button" parent="Panel/CenterBox/MainVbox/BottomButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fa52j")
text = "Back"

[node name="Startbutton" type="Button" parent="Panel/CenterBox/MainVbox/BottomButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fa52j")
disabled = true
text = "Start Match"

[connection signal="pressed" from="Panel/CenterBox/MainVbox/BottomButtons/Backbutton" to="." method="_on_backbutton_pressed"]
[connection signal="pressed" from="Panel/CenterBox/MainVbox/BottomButtons/Startbutton" to="." method="_on_choose_map_pressed"]
